Fixes for panels on mobile

--- a/LiveTL/css/index.css
+++ b/LiveTL/css/index.css
@@ -72,7 +72,6 @@ body {
     align-items: center;
     justify-content: center;
     z-index: 2;
-    position: relative;
     order: 2;
 }
 
